initial-working-version

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 2Bees
-  p.lead Connect Communities.
+  h1 Cobjet
+  p.lead Object
   hr
   .row
     .col-sm-6
