--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,8 +1,8 @@
 footer
   .container.text-center
-    p.pull-left © 2015 2bees.com, Inc. All Rights Reserved
+    p.pull-left © 2015 cobjet.com, Inc. All Rights Reserved
     ul.pull-right.list-inline
       li
-        a(href='https://2bees.com/about') About
+        a(href='https://cobjet.com/about') About
       li
-        a(href='https://2bees.com/contact') Contact
+        a(href='https://cobjet.com/contact') Contact
